syntax = "proto3";

option go_package = "grpc-gcloud/ping";

package ping;

service Pinger {
  rpc Ping (PingRequest) returns (PingReply) {}
  rpc GetVersion (VersionRequest) returns (VersionReply) {}
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}

message VersionRequest {
}

message VersionReply {
  string message = 1;
}
